Last frame logic updated. Tests pass.